# SimpleV4L2

./: CMakeLists.txt  CV.cpp  CV.h  README.txt  SSSE3RgbToRgba.cpp  SSSE3RgbToRgba.h  SXRWindow.cpp  SXRWindow.h  SimpleV4L2.cpp  SimpleV4L2.h  main.cpp
